# Mecanografia

./: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css  tsconfig.json  typingExercise.js  typingExercise.test.js  vite.config.ts
.github/workflows/: ci.yml
data/: ejercicios-basicos.json  ejercicios.json  textos_avanzados.json
docs/: exercise-architecture.md  prototypes.md  specification.md
electron/: main.cjs
mecanografia/: __init__.py  evaluacion_inicial.py
src/: app.js  exercises.js  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ExerciseSelector.ts  FreeTimedTest.ts  Header.ts  InitialAssessment.ts  ProgressPanel.ts  TypingTrainer.ts
src/config/: appConfig.ts  runtime.d.ts
src/core/metrics/: metricsCalculator.ts
src/core/typing/: typingEngine.ts
src/data/: assessmentTexts.ts  exercises.ts
src/domain/: assessmentMetrics.js  freeTimedTest.ts  initialAssessment.ts  scoring.ts  typingEngine.ts
src/exercises/: exerciseBank.ts  loadExerciseBank.ts
src/features/assessment/: expertAssessmentPrototype.js
src/persistence/: localProgressRepository.ts
src/platform/: platformAdapter.ts
src/services/: localStorageService.js  localStorageService.ts
src/storage/: localProgressRepository.ts
src/styles/: app.css
test/: exercises.test.js  freeTimedTest.test.mjs  initialAssessment.test.mjs  localStorageService.test.mjs  metrics.test.js  scoring.test.mjs  typingMetrics.test.mjs
tests/: test_evaluacion_inicial.py
(+4 files in other folders)
