[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mecanografia"
version = "0.1.0"
description = "Herramientas de evaluación inicial para la aplicación Mecanografía."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["mecanografia*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
